# pdf-rescue-mcp

./: .gitignore  README.md  README_EN.md  pyproject.toml
docs/: ARCHITECTURE_1.0.md
examples/: doubao-evolving.json  mcp-config.anythingllm.json  mcp-config.claude-cursor.json  mcp-config.codex.toml  mcp-config.linux.json  mcp-config.vscode.json  mcp-config.windows.json
scripts/: batch_extract_all.py  generate_mcp_config.py  mcp_client.py  monitor_canye_refresh.py  probe_mcp_background.py  probe_mcp_tool.py  run-pdf-rescue.sh  run_mcp_background_library.py  run_mcp_library.py  split_into_entries.py  split_into_entries_v2.py  start-mcp.sh  start_mcp.py  启动中文PDF救援MCP.cmd  收尾书籍任务.ps1  生成本机MCP配置.ps1  运行中文PDF救援.cmd
src/pdf_rescue_mcp/: __init__.py  book_pipeline.py  capacity_benchmark.py  cli.py  history.py  iteration.py  library_pipeline.py  models.py  ocr_engines.py  paths.py  pdf_inspector.py  planner.py  process_controller.py  resource_scheduler.py  runtime.py  runtime_paths.py  server.py  stdio_encoding.py  supervisor.py  task_store.py  throughput_tuning.py  zh.py  术语词表.yaml
tests/: test_batch_extract_all.py  test_book_pipeline.py  test_capacity_benchmark.py  test_cli.py  test_history.py  test_iteration.py  test_launchers.py  test_library_pipeline.py  test_mcp_contract.py  test_ocr_engines.py  test_paths.py  test_pdf_inspector.py  test_planner.py  test_process_controller.py  test_resource_scheduler.py  test_runtime.py  test_runtime_paths.py  test_server.py  test_stdio_encoding.py  test_supervisor.py  test_task_store.py  test_throughput_tuning.py
tmp/library_dabao/: 书库清单.csv  书库清单.json  书库清单.md
tmp/library_dabao/01-主系列-已齐/: 处理历史.jsonl  清单.yaml  状态.json
tmp/mcp/: 后台任务索引.json  批量状态.json
tmp/mcp/probes/: list_tools.py
tmp/pytest/test_agents_can_add_book_limit0/: 术语词表.yaml
tmp/pytest/test_already_retried_low_confi0/: 状态.json
tmp/pytest/test_cached_low_confidence_pag0/: 状态.json
tmp/pytest/test_hybrid_resume_keeps_nativ0/: 状态.json
(+60 files in other folders)
