[project]
name = "pdf-rescue-mcp"
version = "0.1.0"
description = "面向中文书籍PDF的本地MCP服务与命令行工具。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "mcp>=1.13.0",
  "pydantic>=2.8.0",
  "pymupdf>=1.26.0",
  "pillow>=10.4.0",
  "psutil>=6.0.0",
  "pyyaml>=6.0.2",
  "rich>=13.7.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
ocr = [
  "paddlepaddle>=3.0.0",
  "paddleocr>=3.0.0",
  "pytesseract>=0.3.13",
]
ocr-gpu = [
  "paddlepaddle-gpu==3.2.2",
  "paddleocr>=3.0.0",
  "pytesseract>=0.3.13",
  "nvidia-cublas-cu11==11.11.3.6; sys_platform == 'win32'",
  "nvidia-cuda-nvrtc-cu11==11.8.89; sys_platform == 'win32'",
  "nvidia-cuda-runtime-cu11==11.8.89; sys_platform == 'win32'",
  "nvidia-cudnn-cu11==8.9.4.19; sys_platform == 'win32'",
  "nvidia-cufft-cu11==10.9.0.58; sys_platform == 'win32'",
  "nvidia-curand-cu11==10.3.0.86; sys_platform == 'win32'",
  "nvidia-cusolver-cu11==11.4.1.48; sys_platform == 'win32'",
  "nvidia-cusparse-cu11==11.7.5.86; sys_platform == 'win32'",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu118" }

[[tool.uv.index]]
name = "paddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "ocr" },
    { extra = "ocr-gpu" },
  ],
]

[project.scripts]
pdf-rescue = "pdf_rescue_mcp.cli:app"
pdf-rescue-mcp = "pdf_rescue_mcp.server:main"
pdf-jiuyuan = "pdf_rescue_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_rescue_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/pdf_rescue_mcp/术语词表.yaml" = "pdf_rescue_mcp/术语词表.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
